--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,3 +1,3 @@
-server.url=http://192.168.0.153:8080/get
+server.url=https://cataloger-provider.herokuapp.com/get
 server.uid=4c75a065-4ed9-4ef7-87d0-be463127b3d8
-server.uid.url=http://192.168.0.153:8080/registration
+server.uid.url=https://cataloger-provider.herokuapp.com/registration
