--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.freemarker.prefer-file-system-access=true
 #spring.freemarker.template-loader-path=file://home/${USER}//templates/
 #spring.resources.static-locations=file://home/${USER}//static/
-spring.resources.static-locations=file://Users/azathajrullin/Desktop/azat/static/
-spring.freemarker.template-loader-path=file://Users/azathajrullin/Desktop/azat/templates/
+#spring.resources.static-locations=file://Users/azathajrullin/Desktop/azat/static/
+#spring.freemarker.template-loader-path=file://Users/azathajrullin/Desktop/azat/templates/
