--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
-
+server.port=8081
 spring.freemarker.prefer-file-system-access=true
